--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dateformat": "^3.0.2",
     "enzyme": "^3.2.0",
     "history": "^4.7.2",
+    "moment": "^2.20.1",
+    "mustache": "^2.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.17",
+    "react-transition-group": "^2.2.1",
     "redux-persist": "^5.4.0",
     "stylus": "^0.54.5"
   },
@@ -22,6 +25,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "cucumber": "^3.2.1",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest-cli": "^20.0.4"
   }
